# osa-actions

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
actions/: __init__.py  base_actions.py  brute_force_actions.py  ftp_actions.py  http_actions.py  metasploit_auxiliary_actions.py  metasploit_session_manipulation_actions.py  rsh_actions.py  smb_actions.py  ssh_actions.py
actions/adalanche/: AdalancheFetchComputerAccounts.py  AdalancheFetchUsers.py  AdalancheIngestData.py  __init__.py
actions/atomic_red_team/: ExploitAction.py  __init__.py
actions/cme/: CMESMBPasswordSpray.py  CMESMBReconnaissance.py  CMESMBShareEnum.py  CMEUserReconnaissance.py  __init__.py
actions/ftp/: FTPAnonymousLogin.py  FTPLoginWithCredentials.py  FtpDiscoverSSHUserAccounts.py  FtpDownloadFile.py  FtpRecursiveFileSearch.py  __init__.py
actions/gtfobins/: BusyBoxGTFO.py  MakeGTFO.py  __init__.py
actions/hashcat/: HashcatCrackAsRepHashes.py  HashcatCrackKerberosHashes.py  __init__.py
actions/http/: HttpDownloadFile.py  HttpGetAllPages.py  HttpGetLoginPages.py  HttpGobuster.py  HttpServiceScan.py  __init__.py
actions/hydra/: HydraBruteForceAction.py  PasswordSprayAction.py  __init__.py
actions/impacket/: ImpacketGetNPUsers.py  ImpacketGetUserSPNs.py  ImpacketMSSQLClient.py  ImpacketSMBEnum.py  __init__.py
actions/metasploit/: ExploitAction.py  __init__.py  generate_metasploit_configs.py  missing_cves.json  msfconfigs.json  vulnerable_services.json
actions/msf_exploit_actions/: MsfAndroidAdbExploitAdbServerExec.py  MsfApple_iosBrowserExploitSafariJit.py  (+1875 more)
(+5687 files in other folders)
